# worldview-config

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
worldview_config/: __init__.py  cli.py  merge.py  models.py  render.py
worldview_config/templates/: discipline.json.jinja  layer.json.jinja  layer.md.jinja  layerOrder.json.jinja  measurement.json.jinja
